@@ -165,6 +165,7 @@ class TestRDocClassModule < XrefTestCase
     ns = tl.add_module RDoc::NormalModule, 'Namespace'
 
     cm = ns.add_class RDoc::NormalClass, 'Klass', 'Super'
+    cm.document_self = true
     cm.record_location tl
 
     a1 = RDoc::Attr.new nil, 'a1', 'RW', ''
@@ -236,6 +237,66 @@ class TestRDocClassModule < XrefTestCase
     assert_equal tl, loaded.method_list.first.file
   end
 
+  def test_marshal_dump_visibilty
+    @store.path = Dir.tmpdir
+    tl = @store.add_file 'file.rb'
+
+    ns = tl.add_module RDoc::NormalModule, 'Namespace'
+
+    cm = ns.add_class RDoc::NormalClass, 'Klass', 'Super'
+    cm.record_location tl
+
+    a1 = RDoc::Attr.new nil, 'a1', 'RW', ''
+    a1.record_location tl
+    a1.document_self = false
+
+    m1 = RDoc::AnyMethod.new nil, 'm1'
+    m1.record_location tl
+    m1.document_self = false
+
+    c1 = RDoc::Constant.new 'C1', nil, ''
+    c1.record_location tl
+    c1.document_self = false
+
+    i1 = RDoc::Include.new 'I1', ''
+    i1.record_location tl
+    i1.document_self = false
+
+    e1 = RDoc::Extend.new 'E1', ''
+    e1.record_location tl
+    e1.document_self = false
+
+    section_comment = RDoc::Comment.new('section comment')
+    section_comment.location = tl
+
+    assert_equal 1, cm.sections.length, 'sanity, default section only'
+    s0 = cm.sections.first
+    s1 = cm.add_section 'section', section_comment
+
+    cm.add_attribute a1
+    cm.add_method m1
+    cm.add_constant c1
+    cm.add_include i1
+    cm.add_extend e1
+    cm.add_comment 'this is a comment', tl
+
+    loaded = Marshal.load Marshal.dump cm
+    loaded.store = @store
+
+    assert_equal cm, loaded
+
+    inner = RDoc::Markup::Document.new(
+      RDoc::Markup::Paragraph.new('this is a comment'))
+    inner.file = tl
+
+    comment = RDoc::Markup::Document.new inner
+
+    assert_empty loaded.attributes
+    assert_empty loaded.constants
+    assert_empty loaded.includes
+    assert_empty loaded.extends
+    assert_empty loaded.method_list
+  end
   def test_marshal_load_version_0
     tl = @store.add_file 'file.rb'
     ns = tl.add_module RDoc::NormalModule, 'Namespace'
